<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/enroll_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context="com.fgtit.fingerprintattendance.activity.EnrollActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/enroll_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_register_page_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:paddingTop="?attr/actionBarSize"
        android:paddingBottom="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/enroll_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="3dp"
            android:layout_margin="10dp">

        <ImageView
            android:id="@+id/enroll_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@mipmap/user"
            android:layout_centerHorizontal="true"
            android:clickable="true"/>

        </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_enroll_layout_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background"
        android:theme="@style/MaterialTheme.TextLabel">

        <EditText
            android:id="@+id/input_enroll_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:singleLine="true"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@null"
            android:textColor="@android:color/white"
            android:hint="@string/hint_first_name" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_enroll_layout_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background"
        android:theme="@style/MaterialTheme.TextLabel">

        <EditText
            android:id="@+id/input_enroll_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:singleLine="true"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@null"
            android:textColor="@android:color/white"
            android:hint="@string/hint_last_name" />

    </android.support.design.widget.TextInputLayout>



 <!--   <android.support.design.widget.TextInputLayout
        android:id="@+id/input_enroll_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:theme="@style/MaterialTheme.TextLabel">

        <EditText
            android:id="@+id/input_enroll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:singleLine="true"
            android:maxLength="11"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@null"
            android:textColor="@android:color/white"
            android:hint="@string/hint_phone_number" />

    </android.support.design.widget.TextInputLayout> -->

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">


            <LinearLayout
                android:id="@+id/layout_enroll_left_thumb"
                app:layout_widthPercent="46.5%"
                app:layout_marginRightPercent="3.5%"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <RelativeLayout
                    android:id="@+id/left_thumb_relative_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="3dp">

                <ImageView
                    android:id="@+id/img_left_thumb"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@mipmap/fingerprint" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey"
                    android:textSize="12sp"
                    android:text="@string/msg_left_thumb"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_enroll_right_thumb"
                app:layout_widthPercent="46.5%"
                app:layout_marginLeftPercent="3.5%"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_toRightOf="@id/layout_enroll_left_thumb"
                android:layout_toEndOf="@id/layout_enroll_left_thumb">

                <RelativeLayout
                    android:id="@+id/right_thumb_relative_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="3dp">

                <ImageView
                    android:id="@+id/img_right_thumb"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:alpha="1"
                    android:src="@mipmap/fingerprint" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey"
                    android:textSize="12sp"
                    android:text="@string/msg_right_thumb"/>

            </LinearLayout>

        </android.support.percent.PercentRelativeLayout>


    <Button android:id="@+id/btn_enroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/btn_enroll"
        android:textSize="20sp"
        android:background="@drawable/blue_button"
        android:elevation="2dp"
        android:textColor="@android:color/white"/>

        <ProgressBar
            android:id="@+id/enroll_progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/colorGrey"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone" />

    </LinearLayout>

    </ScrollView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>